# whiteboard

./: .gitmodules  CMakeLists.txt  README.md  env.cmake
example/: CMakeLists.txt  main.cpp
src/: context.cpp  main.cpp
src/draw_board/: CDrawBoardWidget.cpp  CDrawBoardWidget.h  CMakeLists.txt  DrawWidget.cpp  DrawWidget.h  MACRO.h  draw_board.qrc  draw_board_widget.cpp  draw_board_widget.h  draw_widget.cpp  draw_widget.h  rectangledata.h  systemdata.cpp  systemdata.h
src/draw_board/shape/: auto_size_widget.cpp  auto_size_widget.h  base_shape.cpp  base_shape.h  content_edit.cpp  content_edit.h  custom_line_shape.cpp  custom_line_shape.h  ellipse_shape.cpp  ellipse_shape.h  line_shape.cpp  line_shape.h  rectangle_shape.cpp  rectangle_shape.h  shape_const_def.h  text_shape.cpp  text_shape.h
src/public/: yk_button.cpp  yk_button.h  yk_icon_button.cpp  yk_icon_button.h  yk_label.cpp  yk_label.h  yk_line_edit.cpp  yk_line_edit.h  yk_progress_bar.cpp  yk_progress_bar.h  yk_style_sheet.h
